# FFmpeg-Converter

./: .gitignore  CMakeLists.txt  FFmpegConverter.desktop  MainWindow.cpp  MainWindow.h  MainWindow_conversion.cpp  MainWindow_onConversionFinished.cpp  README.md  SettingsDialog.cpp  SettingsDialog.h  av1tab.cpp  av1tab.h  build.sh  colorcorrectiondialog.cpp  colorcorrectiondialog.h  combinetab.cpp  combinetab.h  converter.cpp  converter.h  main.cpp  presets.cpp  presets.h  trimtab.cpp  trimtab.h  vp9tab.cpp  vp9tab.h  x264tab.cpp  x264tab.h  x265tab.cpp  x265tab.h
